public/css/style.css
body {background-color: #f4f4f4}

nav {
    border-bottom: 1px solid lightgrey;
}

nav .brand-logo {
    margin-top:5px;
}

p {
    font-size: 16px;
    line-height: 1.6;
}

.sidenav span.badge {
    position: absolute;
}

.breadcrumb-wrapper{
    display: -webkit-inline-box;
    position: fixed;
    top: 21px;
    margin-left: 20px;
    z-index: 998;
}

@media only screen and (max-width: 600px){
    .breadcrumb-wrapper{
        top: 15px;
    }
}

@media only screen and (max-width: 992px) {
    .breadcrumb-wrapper{
        margin-left: 60px;
    }
    .truncate-question {
        width: calc(100vw - 297px) !important;
    }
}

.truncate-question {
    width: calc(100vw - 590px);
}

a.breadcrumb {
    color: #212121 !important;
}

a.breadcrumb::before {
    color: #212121 !important;
    margin-top: -5px;
}

.brand-logo {
    padding-right: 10px !important;
    font-size: 20px !important;
}

.app-download-links {
    width:100%;
    text-align: center;
    padding-top: 15px;
}

.app-download-links > a > img {
    width: 115px;
}

main, footer {
    padding-left: 300px;
}

@media only screen and (max-width : 992px) {
    header, main, footer {
        padding-left: 0;
    }
}

/*Helper classes*/
.handy {
    cursor: pointer;
}

/* login */
.abcRioButton {
    margin-left: auto;
    margin-right: auto;
}

/*profile*/
.profile-bg-image {
    height:150px;
    background-image: url("../images/profile/background.png");
    background-repeat: repeat;
    background-color: #26A69A;
    z-index: 0;
}

.profile-thumb {
    top: -50px;
    position: relative;
    margin-left:15px;
    max-height: 100px;
}

.profile-header-card .card-content {
    margin-top: -100px;
    margin-left: 100px;
}

.big-bar {
    height: 18px;
}

/*SOLE plan cards*/
.sole-card {
    min-height: 124px;
    position: relative;
}

.sole-card>.question-text {
    margin-left:80px;
    margin-right:70px;
    font-size: 18px;
}

.sole-card>.sole-tag {
    margin: 0 0 0 80px;
    color: #777;
    font-size: 16px;
}

.sole-card>.sole-action-buttons {
    position: absolute;
    right: 10px;
    bottom: 10px;
}

@media screen and (max-width: 600px) {

    .sole-card>.question-text {
        margin-left:0;
    }

    .sole-card>.sole-tag {
        margin: 0;
    }

}

.sole-card-date {
    position: absolute !important;
    top: 10px;
    right: 10px;
    z-index: 3;
    padding-top: 5px;
    padding-bottom: 5px;
}

.avatar-image {
    position: absolute;
}

.sole-day {
    float: left;
    font-size: 36px;
    line-height: 30px;
    padding-right: 4px;
    padding-left: 3px;
    font-weight: 300;
}

.sole-month-year {
    float: right;
    font-size: 14px;
    line-height: 16px;
    padding-right: 7px;
    font-weight: 200;
}

/* soles-add */

.recommended-values {
    max-height: 25px;
    margin-bottom: -5px !important;
    max-width: 40px;
}

.target-observation-col {
    margin-top: 15px;
}

.no-bottom-margin {
    margin-bottom: 0px;
}

/* slider styling */

.c-1-color { background: #04893C; }
.c-2-color { background: black; }
.c-3-color { background: #AECCE5; }

.noUi-horizontal {
    height: 36px !important;
}

.noUi-horizontal .noUi-handle {
    height: 44px !important;
    width: 14px !important;
}

.noUi-handle:after, .noUi-handle:before {
    display: none !important;
}

.noUi-horizontal .noUi-handle {
    right: -7px !important;
}

/*questions*/

@media only screen and (max-width:600px) {
    .masonry-card {
        width: calc(100% - 20px);
        margin: 10px;
    }

}

@media only screen and (min-width:601px) and (max-width:992px) {
    .masonry-card {
        width: calc(50% - 20px);
        margin: 10px;
    }

}

@media only screen and (min-width:993px) {
    .masonry-card {
        width: calc(33% - 20px);
        margin: 10px;
    }
}

/* questions-add */
.question-add-header-img {
    top: -50px;
    position: relative;
    margin: -25px;
    padding: 10px;
}

/* questions-single */
.action-buttons-header {
    position: absolute;
    -webkit-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    right: 5%;
    top:104px;
    z-index: 2;
}

.question-card {
    margin-top: 40px;
}

.truncate-tag {
    max-width: 150px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* resources */

@media only screen and (max-width:552px) {
    .resource-card .card-content p.short-description {
        display: none !important;
    }
    .resource-card .card-content p.text-description {
        display: none !important;
    }
}

@media only screen and (min-width:553px) and (max-width:700px) {
    .resource-card .card-content p.text-description {
        display: none !important;
    }
    .resource-card .card-content p.short-description {
        display: block !important;
    }
}

@media only screen and (min-width:701px) and (max-width:992px) {
    .resource-card .card-content p.text-description {
        display: block !important;
    }
    .resource-card .card-content p.short-description {
        display: none !important;
    }
}

@media only screen and (min-width:992px) and (max-width:1200px) {
    .resource-card .card-title {
        font-size: 20px !important;
    }
    .resource-card .card-content {
        padding: 10px !important;
    }

    .resource-card .card-content p.text-description {
        display: none !important;
    }
    .resource-card .card-content p.short-description {
        display: none !important;
    }
}​

